# bashhub-client

./: .gitignore  .travis.yml  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  bashhub-setup.sh  bashhub.py  bashhub.sh  bashhub_setup.py  install-bashhub.sh  install_bashhub.py  pyproject.toml  setup.py  uninstall-bashhub.sh
.github/workflows/: actions.yml  main.yml  publish.yml
bashhub/: __init__.py  bashhub.py  bashhub_globals.py  bashhub_setup.py  bh.py  command_line.py  curses_scrolling.py  i_search.py  interactive_search.py  rest_client.py  shell_utils.py  validation.py  version.py
bashhub/model/: __init__.py  command.py  command_form.py  min_command.py  serializable.py  status_view.py  system.py
bashhub/shell/: bashhub.fish  bashhub.sh  bashhub.zsh  lib-bashhub.sh
bashhub/view/: status.py
docs/tasks/: distribution-plan.md  mac-fingerprint-stabilization-plan.md  registration-validation-plan.md  uv-install-plan.md  uv-update-plan.md
shelltests/: install-bashhub.bats  install-bashhub.fake-home.bats
src/python/: bashhub.py  bashhub_globals.py  bashhub_setup.py  bh.py  dependencies
src/python/model/: Command.py
src/shell/: .config  bashhub.sh  bashhub.zsh
test/: install-bashhub.bats  install-bashhub.fake-home.bats  lib-bashhub.bats
tests/: test_bashhub.py  test_bashhub_globals.py  test_bashhub_setup.py  test_bh.py  test_command.py  test_command_form.py  test_interactive_search.py  test_rest_client.py  test_shell_utils.py  test_validation.py
tests/shell/: install-bashhub.bats  install-bashhub.fake-home.bats  lib-bashhub.bats
